# gpt-auto-applier

./: .gitignore  Makefile  README.md  pyproject.toml  raw.html
gpt_auto_applier/: auto_applier.py  test.py
